--- a/src/style.css
+++ b/src/style.css
@@ -4,18 +4,18 @@ body {
 
 .container img {
   position: relative;
-  top: 10%;
+  top: 1%;
   left: 25%;
   bottom: -10%;
   border-radius: 10px;
 }
 .weather-card {
   position: absolute;
-  top: 1%;
+  top: 3%;
   left: 30%;
   bottom: -25%;
-  width: 400px;
-  height: 580px;
+  width: 500px;
+  height: 660px;
   background-color: rgba(255, 255, 255, 0.534);
   padding: n10px;
   border-radius: 10px;
@@ -51,50 +51,53 @@ body {
 
 h1 {
   color: #7c7c7c;
-  font-size: 28px;
+  font-size: 35px;
   margin: 0 auto;
-  padding: 0 0 0 20px;
+  line-height: 0%;
+  padding: 0px 0px 0px 40px;
 }
 .date {
   color: #7c7c7c;
   font-size: 15px;
-  margin: 0 auto;
-  padding: 0 0 0 20px;
+  margin: 10 auto;
+  padding-left: 40px;
+  line-height: 1;
 }
-
+.weather-Condition {
+  color: #7c7c7c;
+  font-size: 15px;
+  margin: 0 auto;
+  padding-left: 40px;
+}
 .temperature {
   color: rgb(33, 33, 33);
-  font-size: 90px;
-  line-height: 40px;
-  padding: 10px 0 0 40px;
+  font-size: 120px;
+  line-height: 100px;
+  padding: 0 0 0 40px;
 }
 
 .units {
   position: relative;
-  top: -55px;
+  top: -71px;
   left: 1px;
 }
 
 .day {
-  font-size: 15px;
+  font-size: 13px;
   margin: 0 auto;
-  padding: 40px 0 0 40px;
 }
-
 .signs {
   font-size: 40px;
   margin: 0 auto;
-  padding: 40px 0 0 40px;
 }
 .text {
   font-size: 13px;
   margin: 0 auto;
-  padding: 40px 0 0 40px;
 }
 
 .under-Sign {
   display: block;
   text-align: center;
   font-size: xx-small;
-  margin: 250px auto;
+  margin: 220px auto;
 }
